Add opengl to build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,14 @@ if(SFML_FOUND)
   target_link_libraries(${EXECUTABLE_NAME} ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})
 endif()
 
+# OpenGL
+find_package(OpenGL REQUIRED)
+include_directories(${OPENGL_INCLUDE_DIR})
+if (OPENGL_FOUND)
+  target_link_libraries(${EXECUTABLE_NAME} ${OPENGL_LIBRARIES})
+  # target_link_libraries(${EXECUTABLE_NAME} m)
+endif()
+
 # Install target
 install(TARGETS ${EXECUTABLE_NAME} DESTINATION bin)
 
