Add king mesh and opengl code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required (VERSION 2.6)
+set(CMAKE_CXX_STANDARD 11)
 
 # Enable debug symbols by default
 if(NOT CMAKE_BUILD_TYPE)
@@ -30,6 +31,13 @@ include_directories(${OPENGL_INCLUDE_DIR})
 if (OPENGL_FOUND)
   target_link_libraries(${EXECUTABLE_NAME} ${OPENGL_LIBRARIES})
   # target_link_libraries(${EXECUTABLE_NAME} m)
+endif()
+
+# Glut
+find_package(GLUT REQUIRED)
+include_directories(${GLUT_INCLUDE_DIR})
+if (GLUT_FOUND)
+  target_link_libraries(${EXECUTABLE_NAME} ${GLUT_LIBRARIES} )
 endif()
 
 # Install target
