Create function for loading file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ set (3DToonChess_VERSION_MINOR 1)
 set (
   CXX_FILES
   ${CMAKE_SOURCE_DIR}/src/mesh/Mesh.cxx
-  ${CMAKE_SOURCE_DIR}/src/mesh/utils.cxx
+  ${CMAKE_SOURCE_DIR}/src/utils.cxx
 )
 
 # Define sources and executable
