--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,16 +19,9 @@ set (
   ${CMAKE_SOURCE_DIR}/src/utils.cxx
 )
 
-set (
-  ASSETS
-  ${CMAKE_SOURCE_DIR}/assets/king.obj
-)
-
 # Define sources and executable
 set(EXECUTABLE_NAME "3DToonChess")
-add_executable(${EXECUTABLE_NAME} src/3DToonChess.cxx ${CXX_FILES} ${ASSETS})
-
-set_source_files_properties(${ASSETS} PROPERTIES HEADER_FILE_ONLY TRUE)
+add_executable(${EXECUTABLE_NAME} src/3DToonChess.cxx ${CXX_FILES})
 
 # Download and unpack googletest
 configure_file(CMakeLists.txt.in googletest-download/CMakeLists.txt)
