--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,12 @@ language: c++
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq libsfml-dev cmake stockfish
-  - sudo apt-get install -qq cppcheck
+  # Install cppcheck (version provided by apt is too old)
+  - wget github.com/danmar/cppcheck/releases/download/1.81/cppcheck-1.81.tar.gz
+  - tar -xvf cppcheck-1.81.tar.gz
+  - pushd cppcheck-1.81/
+  - sudo make install
+  - popd
 
 script:
   - cppcheck --error-exitcode=1 --enable=all src/
