--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - wget github.com/danmar/cppcheck/releases/download/1.81/cppcheck-1.81.tar.gz
   - tar -xvf cppcheck-1.81.tar.gz
   - pushd cppcheck-1.81/
-  - sudo make install
+  - sudo make install CFGDIR=/usr/share/cppcheck/
   - popd
 
 script:
