--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ before_install:
 
 script:
   - stockfish
-  - more /etc/environment
+  - cat /etc/environment
+  - cat ~/.profile
   - cppcheck --quiet --error-exitcode=1 --enable=all --inline-suppr src/
   - mkdir build
   - cd build
