--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq libsfml-dev cmake stockfish
 
+  # Install valgrind for checking memory leaks on tests
+  - sudo apt-get install -qq valgrind
+
   # Install cppcheck (version provided by apt is too old)
   - wget github.com/danmar/cppcheck/releases/download/1.81/cppcheck-1.81.tar.gz
   - tar -xvf cppcheck-1.81.tar.gz
@@ -31,3 +34,4 @@ script:
   - cmake ..
   - make
   - ./tests
+  - valgrind --leak-check=full --track-origins=yes --error-exitcode=1 ./tests
