Created Camera class in order to clean the main function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,20 +18,29 @@ set(
   ${CMAKE_SOURCE_DIR}/src/mesh/Mesh.cxx
   ${CMAKE_SOURCE_DIR}/src/mesh/meshes.cxx
   ${CMAKE_SOURCE_DIR}/src/mesh/loadObjFile.cxx
+
   ${CMAKE_SOURCE_DIR}/src/shader/CompilationException.cxx
   ${CMAKE_SOURCE_DIR}/src/shader/LinkingException.cxx
   ${CMAKE_SOURCE_DIR}/src/shader/Shader.cxx
   ${CMAKE_SOURCE_DIR}/src/shader/ShaderProgram.cxx
   ${CMAKE_SOURCE_DIR}/src/shader/shaderPrograms.cxx
+
   ${CMAKE_SOURCE_DIR}/src/ColorPicking/ColorPicking.cxx
+
   ${CMAKE_SOURCE_DIR}/src/ShadowMapping/ShadowMapping.cxx
+
   ${CMAKE_SOURCE_DIR}/src/SmokeGenerator/SmokeGenerator.cxx
+
   ${CMAKE_SOURCE_DIR}/src/PhysicsWorld/Fragment.cxx
   ${CMAKE_SOURCE_DIR}/src/PhysicsWorld/PhysicsWorld.cxx
+
   ${CMAKE_SOURCE_DIR}/src/ChessGame/ConnectionException.cxx
   ${CMAKE_SOURCE_DIR}/src/ChessGame/StockfishConnector.cxx
   ${CMAKE_SOURCE_DIR}/src/ChessGame/GameException.cxx
   ${CMAKE_SOURCE_DIR}/src/ChessGame/ChessGame.cxx
+
+  ${CMAKE_SOURCE_DIR}/src/Camera/Camera.cxx
+
   ${CMAKE_SOURCE_DIR}/src/utils/utils.cxx
   ${CMAKE_SOURCE_DIR}/src/utils/math.cxx
 )
