--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,6 @@ script:
   - mkdir build
   - cd build
   - cmake ..
-  - make -j6
+  - sudo make -j6 install
   - ./tests
   - valgrind --leak-check=full --track-origins=yes --error-exitcode=1 ./tests
