--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,8 @@ set(
 
   ${CMAKE_SOURCE_DIR}/src/Camera/Camera.cxx
 
+  ${CMAKE_SOURCE_DIR}/src/Clock/Clock.cxx
+
   ${CMAKE_SOURCE_DIR}/src/Event/EventStack.cxx
 
   ${CMAKE_SOURCE_DIR}/src/utils/utils.cxx
@@ -64,6 +66,10 @@ install(DIRECTORY "${TOONCHESS_SHARE_DIR}/toonchess"
 # Define sources and executable
 set(EXECUTABLE_NAME "ToonChess")
 add_executable(${EXECUTABLE_NAME} src/ToonChess.cxx ${CXX_FILES})
+
+# Create test executable
+set(TEST_NAME "tests")
+add_executable(${TEST_NAME} tests/test_main.cxx ${CXX_FILES})
 
 # Download and unpack googletest
 configure_file(CMakeLists-googletest.txt.in googletest-download/CMakeLists.txt)
@@ -83,31 +89,42 @@ endif()
 
 # Add googletest.
 add_subdirectory(
-  ${CMAKE_BINARY_DIR}/googletest-src
-  ${CMAKE_BINARY_DIR}/googletest-build)
-
-# Create test executable
-set(TEST_NAME "tests")
-add_executable(${TEST_NAME} tests/test_main.cxx ${CXX_FILES})
+    ${CMAKE_BINARY_DIR}/googletest-src
+    ${CMAKE_BINARY_DIR}/googletest-build)
 target_link_libraries(${TEST_NAME} gmock_main)
 
-# Detect and add SFML
-set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules" ${CMAKE_MODULE_PATH})
-
-find_package(SFML 2 REQUIRED graphics window system)
-if(SFML_FOUND)
-  include_directories(${SFML_INCLUDE_DIR})
-  target_link_libraries(${EXECUTABLE_NAME} ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})
-  target_link_libraries(${TEST_NAME} ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})
+# Download and unpack glfw
+configure_file(CMakeLists-glfw.txt.in glfw-download/CMakeLists.txt)
+set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
+execute_process(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
+  RESULT_VARIABLE result
+  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/glfw-download
+)
+if(result)
+  message(FATAL_ERROR "CMake step for glfw failed: ${result}")
+endif()
+execute_process(COMMAND ${CMAKE_COMMAND} --build .
+  RESULT_VARIABLE result
+WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/glfw-download )
+if(result)
+  message(FATAL_ERROR "Build step for glfw failed: ${result}")
 endif()
 
-# OpenGL
+# Add googletest.
+add_subdirectory(
+    ${CMAKE_BINARY_DIR}/glfw-src
+    ${CMAKE_BINARY_DIR}/glfw-build)
+target_link_libraries(${EXECUTABLE_NAME} glfw)
+target_link_libraries(${TEST_NAME} glfw)
+
+# Detect and add OpenGL
 find_package(OpenGL REQUIRED)
-include_directories(${OPENGL_INCLUDE_DIR})
 if (OPENGL_FOUND)
+  include_directories(${OPENGL_INCLUDE_DIR})
   target_link_libraries(${EXECUTABLE_NAME} ${OPENGL_LIBRARIES})
   target_link_libraries(${TEST_NAME} ${OPENGL_LIBRARIES})
-  # target_link_libraries(${EXECUTABLE_NAME} m)
 endif()
 
 # Detect and add Bullet Physics
@@ -116,6 +133,14 @@ if(BULLET_FOUND)
   include_directories(${BULLET_INCLUDE_DIR})
   target_link_libraries(${EXECUTABLE_NAME} ${BULLET_LIBRARIES})
   target_link_libraries(${TEST_NAME} ${BULLET_LIBRARIES})
+endif()
+
+# Detect and add libpng
+find_package(PNG REQUIRED)
+if(PNG_FOUND)
+  include_directories(${PNG_INCLUDE_DIRS})
+  target_link_libraries(${EXECUTABLE_NAME} ${PNG_LIBRARIES})
+  target_link_libraries(${TEST_NAME} ${PNG_LIBRARIES})
 endif()
 
 install(TARGETS ToonChess
