--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,6 @@
 cmake_minimum_required (VERSION 2.8.2)
 set(CMAKE_CXX_STANDARD 11)
 
-# Enable debug symbols by default
-if(NOT CMAKE_BUILD_TYPE)
-  set(CMAKE_BUILD_TYPE Debug CACHE STRING "Choose the type of build (Debug or Release)" FORCE)
-endif()
-
 project(ToonChess)
 
 # The version number
@@ -20,12 +15,28 @@ configure_file (
     "${CMAKE_SOURCE_DIR}/src/get_share_path.cxx"
 )
 
-# Add headers
+# Add CXX files
 set(
   CXX_FILES
+  ${CMAKE_SOURCE_DIR}/src/Camera/Camera.cxx
+
+  ${CMAKE_SOURCE_DIR}/src/ChessGame/ConnectionException.cxx
+  ${CMAKE_SOURCE_DIR}/src/ChessGame/StockfishConnector.cxx
+  ${CMAKE_SOURCE_DIR}/src/ChessGame/GameException.cxx
+  ${CMAKE_SOURCE_DIR}/src/ChessGame/ChessGame.cxx
+
+  ${CMAKE_SOURCE_DIR}/src/Clock/Clock.cxx
+
+  ${CMAKE_SOURCE_DIR}/src/ColorPicking/ColorPicking.cxx
+
+  ${CMAKE_SOURCE_DIR}/src/Event/EventStack.cxx
+
   ${CMAKE_SOURCE_DIR}/src/mesh/Mesh.cxx
   ${CMAKE_SOURCE_DIR}/src/mesh/meshes.cxx
   ${CMAKE_SOURCE_DIR}/src/mesh/loadObjFile.cxx
+
+  ${CMAKE_SOURCE_DIR}/src/PhysicsWorld/Fragment.cxx
+  ${CMAKE_SOURCE_DIR}/src/PhysicsWorld/PhysicsWorld.cxx
 
   ${CMAKE_SOURCE_DIR}/src/shader/CompilationException.cxx
   ${CMAKE_SOURCE_DIR}/src/shader/LinkingException.cxx
@@ -33,25 +44,9 @@ set(
   ${CMAKE_SOURCE_DIR}/src/shader/ShaderProgram.cxx
   ${CMAKE_SOURCE_DIR}/src/shader/shaderPrograms.cxx
 
-  ${CMAKE_SOURCE_DIR}/src/ColorPicking/ColorPicking.cxx
-
   ${CMAKE_SOURCE_DIR}/src/ShadowMapping/ShadowMapping.cxx
 
   ${CMAKE_SOURCE_DIR}/src/SmokeGenerator/SmokeGenerator.cxx
-
-  ${CMAKE_SOURCE_DIR}/src/PhysicsWorld/Fragment.cxx
-  ${CMAKE_SOURCE_DIR}/src/PhysicsWorld/PhysicsWorld.cxx
-
-  ${CMAKE_SOURCE_DIR}/src/ChessGame/ConnectionException.cxx
-  ${CMAKE_SOURCE_DIR}/src/ChessGame/StockfishConnector.cxx
-  ${CMAKE_SOURCE_DIR}/src/ChessGame/GameException.cxx
-  ${CMAKE_SOURCE_DIR}/src/ChessGame/ChessGame.cxx
-
-  ${CMAKE_SOURCE_DIR}/src/Camera/Camera.cxx
-
-  ${CMAKE_SOURCE_DIR}/src/Clock/Clock.cxx
-
-  ${CMAKE_SOURCE_DIR}/src/Event/EventStack.cxx
 
   ${CMAKE_SOURCE_DIR}/src/utils/utils.cxx
   ${CMAKE_SOURCE_DIR}/src/utils/math.cxx
@@ -67,31 +62,35 @@ install(DIRECTORY "${TOONCHESS_SHARE_DIR}/toonchess"
 set(EXECUTABLE_NAME "ToonChess")
 add_executable(${EXECUTABLE_NAME} src/ToonChess.cxx ${CXX_FILES})
 
-# Create test executable
-set(TEST_NAME "tests")
-add_executable(${TEST_NAME} tests/test_main.cxx ${CXX_FILES})
+# Tests
+OPTION(TOONCHESS_BUILD_TESTS "ToonChess tests" OFF)
+if(TOONCHESS_BUILD_TESTS)
+  # Create test executable
+  set(TEST_NAME "toonchess_tests")
+  add_executable(${TEST_NAME} tests/test_main.cxx ${CXX_FILES})
 
-# Download and unpack googletest
-configure_file(CMakeLists-googletest.txt.in googletest-download/CMakeLists.txt)
-execute_process(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
-  RESULT_VARIABLE result
-  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/googletest-download
-)
-if(result)
-  message(FATAL_ERROR "CMake step for googletest failed: ${result}")
-endif()
-execute_process(COMMAND ${CMAKE_COMMAND} --build .
-  RESULT_VARIABLE result
-  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/googletest-download )
-if(result)
-  message(FATAL_ERROR "Build step for googletest failed: ${result}")
-endif()
+  # Download and unpack googletest
+  configure_file(CMakeLists-googletest.txt.in googletest-download/CMakeLists.txt)
+  execute_process(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
+    RESULT_VARIABLE result
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/googletest-download
+  )
+  if(result)
+    message(FATAL_ERROR "CMake step for googletest failed: ${result}")
+  endif()
+  execute_process(COMMAND ${CMAKE_COMMAND} --build .
+    RESULT_VARIABLE result
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/googletest-download )
+  if(result)
+    message(FATAL_ERROR "Build step for googletest failed: ${result}")
+  endif()
 
-# Add googletest.
-add_subdirectory(
-    ${CMAKE_BINARY_DIR}/googletest-src
-    ${CMAKE_BINARY_DIR}/googletest-build)
-target_link_libraries(${TEST_NAME} gmock_main)
+  # Add googletest.
+  add_subdirectory(
+      ${CMAKE_BINARY_DIR}/googletest-src
+      ${CMAKE_BINARY_DIR}/googletest-build)
+  target_link_libraries(${TEST_NAME} gmock_main)
+endif()
 
 # Download and unpack glfw
 configure_file(CMakeLists-glfw.txt.in glfw-download/CMakeLists.txt)
@@ -117,14 +116,18 @@ add_subdirectory(
     ${CMAKE_BINARY_DIR}/glfw-src
     ${CMAKE_BINARY_DIR}/glfw-build)
 target_link_libraries(${EXECUTABLE_NAME} glfw)
-target_link_libraries(${TEST_NAME} glfw)
+if(TOONCHESS_BUILD_TESTS)
+  target_link_libraries(${TEST_NAME} glfw)
+endif()
 
 # Detect and add OpenGL
 find_package(OpenGL REQUIRED)
 if (OPENGL_FOUND)
   include_directories(${OPENGL_INCLUDE_DIR})
   target_link_libraries(${EXECUTABLE_NAME} ${OPENGL_LIBRARIES})
-  target_link_libraries(${TEST_NAME} ${OPENGL_LIBRARIES})
+  if(TOONCHESS_BUILD_TESTS)
+    target_link_libraries(${TEST_NAME} ${OPENGL_LIBRARIES})
+  endif()
 endif()
 
 # Detect and add Bullet Physics
@@ -132,7 +135,9 @@ find_package(Bullet 2.8 REQUIRED)
 if(BULLET_FOUND)
   include_directories(${BULLET_INCLUDE_DIR})
   target_link_libraries(${EXECUTABLE_NAME} ${BULLET_LIBRARIES})
-  target_link_libraries(${TEST_NAME} ${BULLET_LIBRARIES})
+  if(TOONCHESS_BUILD_TESTS)
+    target_link_libraries(${TEST_NAME} ${BULLET_LIBRARIES})
+  endif()
 endif()
 
 # Detect and add libpng
@@ -140,7 +145,9 @@ find_package(PNG REQUIRED)
 if(PNG_FOUND)
   include_directories(${PNG_INCLUDE_DIRS})
   target_link_libraries(${EXECUTABLE_NAME} ${PNG_LIBRARIES})
-  target_link_libraries(${TEST_NAME} ${PNG_LIBRARIES})
+  if(TOONCHESS_BUILD_TESTS)
+    target_link_libraries(${TEST_NAME} ${PNG_LIBRARIES})
+  endif()
 endif()
 
 install(TARGETS ToonChess
