--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 build/*
 *.gch
 src/get_share_path.cxx
+gui/toonchess/get_config_path.py
 gui/toonchess/get_share_path.py
 gui/toonchess/__pycache__/*
