--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 build/*
 *.gch
 src/get_share_path.cxx
+gui/setup.py
 gui/toonchess/get_config_path.py
 gui/toonchess/get_share_path.py
 gui/toonchess/__pycache__/*
+*egg-info
