--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq cmake stockfish xorg-dev freeglut3-dev
 
-  - pip install traitsui pyqt5
+  - sudo apt-get install -qq python3-pyqt5
+  - pip install traitsui
 
   # Install valgrind for checking memory leaks on tests
   - sudo apt-get install -qq valgrind
